--- a/panda_kiosk/src/app/globals.css
+++ b/panda_kiosk/src/app/globals.css
@@ -6,8 +6,8 @@
 
 
 :root {
-  --background: #C21D03;
-  --foreground: #FFFFFF;
+  --background: #FFFFFF;
+  --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
